--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
+
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <!-- <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
@@ -23,6 +24,10 @@
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+      </div> -->
+      <button class="btn">click</button>
+      <div>
+        <ol class="texto"></ol>
       </div>
     </div>
   </body>
